--- a/project1.html
+++ b/project1.html
@@ -3,12 +3,13 @@
 <html>
     <head>
         <title>Philadelphia Phillies</title>
+        
         <!--CSS Link-->
         <link href="project1.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
-
+        <h1><script>"Home of Philadelphia Phillies Fans of Ole Miss"</script></h1>
         <!--JS Link-->
         <script type="text/javascript" src="project1.js"></script>
     </body>
