--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,12 @@
     </head>
 
     <body>
-        <h1><script>"Home of Philadelphia Phillies Fans of Ole Miss"</script></h1>
+        <h1>Home of Philadelphia Phillies Fans of Ole Miss</h1>
+        <div>
+            <h3>
+                <a href = "http://mlb.mlb.com/mlb/standings/index.jsp">Current MLB Standings</a>
+            </h3>
+        </div>
         <!--JS Link-->
         <script type="text/javascript" src="project1.js"></script>
     </body>
