--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>Home of Philadelphia Phillies Fans of Ole Miss</h1>
+        <h1>Home of Philadelphia Phillies Fan Page</h1>
         <div>
             <h3>
                 <a href = "http://mlb.mlb.com/mlb/standings/index.jsp">Current MLB Standings</a>
