--- a/project1.html
+++ b/project1.html
@@ -22,10 +22,31 @@
             
         </div>
 
-        <div id="stadium">
-            <h3>Stadium</h3>
+        <div id="names">
+            <h3>Team Names and Nicknames</h3>
+            <h4>Official Names</h4>
+            <ul>
+                <li>Philadelphia Quakers (1883-1889)</li>
+                <li>Philadelphia Phillies (1890-present)</li>
+            </ul>
+            <br>
+            <h4>Nicknames</h4>
+            <ul>
+                <li>The Phils</li>
+                <li>The Fightin' Phils</li>
+                <li>The Fightins'</li>
+                <li>The Red Pinstripes</li>
+            </ul>
 
-            <img scr="https://media.gannett-cdn.com/cherryhill/37795283001/201504/3466/37795283001_4157354798001_PHILLIESHOMEOPEN1small.jpg"/>
+        </div>
+
+        <br>
+        <br>
+        <h3>Stadium</h3>
+        <img src="https://cdn.pastemagazine.com/www/blogs/lists/CitizensBankPark-MainImage.jpg"/>
+        <div id="stadium">
+            
+
             <p>Citizens Bank Park is a baseball park located in Philadelphia, Pennsylvania within the South Philadelphia Sports Complex. 
                 It is the home of the Philadelphia Phillies, the city's Major League Baseball (MLB) franchise. 
                 It opened April 3, 2004, and hosted its first regular-season baseball game on April 12 of the same year, with the Phillies losing to the Cincinnati Reds, 4–1.
