--- a/project1.html
+++ b/project1.html
@@ -94,6 +94,12 @@
         <!--JS Link-->
         <script type="text/javascript" src="project1.js"></script>
     </body>
-
+    <br>
+    <br>
+    <br>
+    <footer>
+            <button class="button" onclick=" window.open('https://www.mlb.com/phillies','_blank')">Click to go to the Phillies offical website</button>
+    </footer>
+    <br>
 
 </html>
